--- a/tools/eva-cloud-manager/Cargo.toml
+++ b/tools/eva-cloud-manager/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/main.rs"
 [dependencies]
 serde = { version = "1.0.143", features = ["derive", "rc"] }
 serde_yaml = "0.8.26"
-eva-common = { version = "0.1.178" }
+eva-common = { version = "0.1.178", features = ["common-payloads"] }
 eva-client = "0.1.7"
 clap = { version = "3.0.7", features = ["derive"] }
 tokio = { version = "1.20.1", features = ["full"] }
@@ -40,5 +40,7 @@ once_cell = "1.9.0"
 prettytable-rs = "0.8.0"
 chrono = "0.4.19"
 bzip2 = "0.4.3"
-openssl = { version = "0.10.42", features = ["vendored"] }
-wshack = { version = "0.1", path = "../../wshack" }
+openssl = "0.10.42"
+
+[features]
+openssl-vendored = ["openssl/vendored"]
