--- a/svc/controller-lm/Cargo.toml
+++ b/svc/controller-lm/Cargo.toml
@@ -18,9 +18,10 @@ bmart = "0.2.2"
 once_cell = "1.9.0"
 chrono = "0.4.19"
 cron = "0.11.0"
-submap = { version = "0.2.2", features = ["digest"] }
+submap = { version = "0.2.3", features = ["native-digest"] }
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
 eva-robots = "0.1.6"
 
 [features]
 std-alloc = []
+openssl-vendored = ["submap/openssl-vendored"]
