--- a/svc/aaa-localauth/Cargo.toml
+++ b/svc/aaa-localauth/Cargo.toml
@@ -16,11 +16,12 @@ async-channel = "1.7.1"
 eva-sdk = { version = "0.1.108" }
 jemallocator = { version = "0.5.0" }
 rand = "0.8.4"
-sha2 = "0.10.1"
 hex = "0.4.3"
 once_cell = "1.9.0"
 lazy_static = "1.4.0"
 bmart = "0.1.14"
+openssl = "0.10.42"
 
 [features]
 std-alloc = []
+openssl-vendored = ["openssl/vendored"]
