--- a/svc/filemgr/Cargo.toml
+++ b/svc/filemgr/Cargo.toml
@@ -14,12 +14,13 @@ lazy_static = "1.4.0"
 once_cell = "1.13.0"
 async-channel = "1.7.1"
 serde_yaml = "0.8.26"
-sha2 = "0.10.1"
 hex = "0.4.3"
 parse_int = "0.6.0"
 jemallocator = { version = "0.5.0" }
 tempfile = "3.3.0"
 bmart = "0.2.4"
+openssl = "0.10.42"
 
 [features]
 std-alloc = []
+openssl-vendored = ["openssl/vendored"]
