--- a/svc/hmi/Cargo.toml
+++ b/svc/hmi/Cargo.toml
@@ -34,13 +34,14 @@ serde_json = "1.0.79"
 url = "2.2.2"
 cookie = "0.16.0"
 multer = "2.0.2"
-sha2 = "0.10.1"
 hex = "0.4.3"
 tera = "1.15.0"
 hyper-tungstenite = "0.6.0"
 gettext = "0.4.0"
 hyper-static = "0.1.5"
 urlencoding = "2.1.0"
+openssl = "0.10.42"
 
 [features]
 std-alloc = []
+openssl-vendored = ["openssl/vendored"]
