--- a/svc/aaa-otp/Cargo.toml
+++ b/svc/aaa-otp/Cargo.toml
@@ -15,13 +15,14 @@ log = "0.4.14"
 async-channel = "1.7.1"
 eva-sdk = { version = "0.1.108" }
 jemallocator = { version = "0.5.0" }
-rand = "0.8.4"
 hex = "0.4.3"
 once_cell = "1.9.0"
 lazy_static = "1.4.0"
 bmart = "0.1.14"
 boringauth = "0.9.0"
 base32 = "0.4.0"
+openssl = "0.10.42"
 
 [features]
 std-alloc = []
+openssl-vendored = ["openssl/vendored"]
