--- a/svc/repl/Cargo.toml
+++ b/svc/repl/Cargo.toml
@@ -22,6 +22,8 @@ once_cell = "1.10.0"
 bmart = "0.1.14"
 triggered = "0.1.2"
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
+openssl = "0.10.42"
 
 [features]
 std-alloc = []
+openssl-vendored = ["openssl/vendored"]
