--- a/share/svc-tpl/svc-tpl-filewriter.yml
+++ b/share/svc-tpl/svc-tpl-filewriter.yml
@@ -3,6 +3,8 @@ command: target/debug/eva-svc-filewriter
 bus:
   path: var/bus.ipc
 config:
+  # the file path may contain date-time formatting options
+  # see https://man7.org/linux/man-pages/man3/strftime.3.html
   file_path: /tmp/1.csv
   # flush data after each block (slow, but more reliable)
   auto_flush: false
