--- a/svc/svc-mailer/Cargo.toml
+++ b/svc/svc-mailer/Cargo.toml
@@ -10,7 +10,7 @@ tokio = { version = "1.20.1", features = ["full"] }
 async-trait = { version = "0.1.51" }
 serde = { version = "1.0.143", features = ["derive", "rc"] }
 log = "0.4.14"
-lettre = { version = "0.10.0-rc.4", features = ["tokio1-native-tls"] }
+lettre = { version = "0.10.1", features = ["tokio1-native-tls"] }
 jemallocator = { version = "0.5.0" }
 
 [features]
