--- a/share/svc-tpl/svc-tpl-hmi.yml
+++ b/share/svc-tpl/svc-tpl-hmi.yml
@@ -22,7 +22,7 @@ config:
     stick_ip: true
     allow_list_neighbors: false
   keep_api_log: 86400
-  # any user can get API log for everyone (false = admins only)
+  # any user can get API log for everyone (false = admins and users with op moderator in ACLs)
   # public_api_log: true
   ui_path: ui
   pvt_path: pvt
