replicate remote in cfg

--- a/share/svc-tpl/svc-tpl-replication.yml
+++ b/share/svc-tpl/svc-tpl-replication.yml
@@ -53,4 +53,6 @@ config:
   # subscribed OIDS
   oids:
     - "#"
+  # DANGEROUS, enable for multi-level clusters only
+  #replicate_remote: true
 user: nobody
