--- a/eva/Cargo.toml
+++ b/eva/Cargo.toml
@@ -2,7 +2,7 @@
 name = "eva-ics"
 version = "4.0.1"
 edition = "2021"
-authors = ["Sergei S. <div@altertech.com>"]
+authors = ["Serhij S. <div@altertech.com>"]
 license = "Apache-2.0"
 description = "EVA ICS v4"
 readme = "README.md"
