--- a/svc/db-sql/eapi.yml
+++ b/svc/db-sql/eapi.yml
@@ -102,3 +102,5 @@ state_log:
             "value": 15
         }
     ]
+state_push:
+  des: "push item states into db, (payload: single item state or list)"
