--- a/docker/test/Makefile
+++ b/docker/test/Makefile
@@ -2,4 +2,5 @@ all:
 	@echo select target
 
 clean:
+	docker-compose down
 	sudo rm -rf ./data/runtime/registry ./data/runtime/xc ./data/runtime/.container_setup_completed
