--- a/docker/test/docker-compose.yml
+++ b/docker/test/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   eva-ics:
-    container_name: eva_basic_1
+    container_name: eva_1
     hostname: eva_1
     image: altertech/eva-ics4
     volumes:
@@ -12,17 +12,6 @@ services:
         - ./data/runtime:/mnt/runtime
         - ./data/etc:/mnt/etc
         - ./data/log:/mnt/log
-    networks:
-      ic:
-        ipv4_address: 10.27.5.10
-
-networks:
-  ic:
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-        - subnet: 10.27.5.0/24
 
 volumes:
   ui:
