metadata check for arbitrary_precision

--- a/eva/Cargo.toml
+++ b/eva/Cargo.toml
@@ -62,3 +62,6 @@ openssl = "0.10.42"
 [features]
 std-alloc = []
 openssl-vendored = ["openssl/vendored"]
+
+[build-dependencies]
+cargo_metadata = "0.15.4"
