--- a/contrib/bus-to-kafka/svc-tpl-bus-to-kafka.yml
+++ b/contrib/bus-to-kafka/svc-tpl-bus-to-kafka.yml
@@ -7,8 +7,7 @@ config:
   oids:
   - "#"
   kafka:
-    targets:
-      - 127.0.0.1:9092
+    target: 127.0.0.1:9092
     topics:
       state: state
       log: log
