--- a/contrib/raw-udp-to-bus/svc-tpl-raw-udp-to-bus.yml
+++ b/contrib/raw-udp-to-bus/svc-tpl-raw-udp-to-bus.yml
@@ -10,11 +10,11 @@ config:
     # 
     # The service sets item values only, status register is always 1
     25001:
+      # for decode options, see https://docs.python.org/3/library/struct.html,
+      # the default encoding is "<d" (little-endian IEE754 double)
+      decode: "<d"
       oid: sensor:tests/t1
     25002:
-      # for decoding, see https://docs.python.org/3/library/struct.html, the
-      # default encoding is "<d" (little-endian IEE754 double)
-      decode: d
       oid: sensor:tests/t2
 user: nobody
 workers: 1
