--- a/eva/Cargo.toml
+++ b/eva/Cargo.toml
@@ -58,6 +58,7 @@ async-io = "1.7.0"
 eva-robots = "0.2.0"
 parking_lot = { version = "0.12.1", features = ["serde"] }
 openssl = "0.10.42"
+sysinfo = "0.29.2"
 
 [features]
 std-alloc = []
