--- a/eva/eapi.yml
+++ b/eva/eapi.yml
@@ -712,6 +712,18 @@ svc.list:
           "status": "online"
       }
     ]
+core.sysinfo:
+  des: Get machine system info
+  par:
+  ret: "System info payload (la = load averages, disk usage = for EVA ICS dir)"
+  exm: |
+    {
+        "disk_usage": 22.581110721748498,
+        "la1": 3.15,
+        "la15": 2.54,
+        "la5": 3.21,
+        "ram_usage": 65.57377548639009
+    }
 core.shutdown:
   des: Shuts down the core (will be usually auto-restarted)
   par:
