--- a/svc/controller-lm/Cargo.toml
+++ b/svc/controller-lm/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "eva-controller-lm"
-version = "4.0.1"
+version = "4.0.2"
 edition = "2021"
 
 [dependencies]
 busrt = { version = "0.4", features = ["rpc", "ipc"] }
-eva-common = { version = "0.2.14", features = ["events", "time", "logic"] }
-eva-sdk = { version = "0.2.9", features = ["controller"] }
+eva-common = { version = "0.3.0", features = ["events", "time", "logic", "common-payloads"] }
+eva-sdk = { version = "0.3.0", features = ["controller"] }
 tokio = { version = "1.20.1", features = ["full"] }
 async-trait = { version = "0.1.51" }
 serde = { version = "1.0.143", features = ["derive", "rc"] }
@@ -20,7 +20,7 @@ chrono = "0.4.19"
 cron = "0.11.0"
 submap = { version = "0.2.3", features = ["native-digest"] }
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
-eva-robots = "0.2.0"
+eva-robots = "0.3.0"
 
 [features]
 std-alloc = []
