--- a/share/svc-tpl/svc-tpl-controller-virtual.yml
+++ b/share/svc-tpl/svc-tpl-controller-virtual.yml
@@ -2,7 +2,9 @@ bus:
   path: var/bus.ipc
 command: target/debug/eva-controller-virtual
 config:
+  # basic functionality
   # auto-create virtual items on set/action
+  # set true for PLC simulation
   auto_create: false
   # define virtual items
   items:
@@ -16,5 +18,31 @@ config:
   #- unit:tests/vent
   #- unit:tests/door
   #- unit:tests/u1
+  # advanced functionality (PLC tag/var table simulation)
+  # pull interval, in seconds
+  #pull_interval: 1
+  # pull mapping
+  #pull: 
+  # - var: test_array1
+  #   map:
+  #     - idx: 0
+  #       oid: sensor:tests/temp
+  #     - idx: 1
+  #       oid: sensor:tests/hum
+  # - var: test_var
+  #   map:
+  #     - oid: sensor:tests/pressure
+  # - var: unit.u1
+  #   map:
+  #     - oid: unit:tests/u1
+  # - var: unit.u2
+  #   map:
+  #     - oid: unit:tests/u2
+  # action mapping
+  #action_map:
+    #unit:tests/u1:
+      #var: unit.u1
+    #unit:tests/u2:
+      #var; unit.u2
 user: nobody
 workers: 1
