--- a/svc/svc-filewriter/Cargo.toml
+++ b/svc/svc-filewriter/Cargo.toml
@@ -11,13 +11,15 @@ tokio = { version = "1.20.1", features = ["full"] }
 async-trait = { version = "0.1.51" }
 serde = { version = "1.0.143", features = ["derive", "rc"] }
 log = "0.4.14"
-lazy_static = "1.4.0"
 async-channel = "1.7.1"
 serde_json = "1.0.79"
 chrono = "0.4.19"
 once_cell = "1.9.0"
 jemallocator = { version = "0.5.0" }
 cron = "0.11.0"
+parking_lot = "0.12.1"
+openssl = "0.10.42"
 
 [features]
 std-alloc = []
+openssl-vendored = ["openssl/vendored"]
