--- a/svc/dapp/Cargo.toml
+++ b/svc/dapp/Cargo.toml
@@ -13,6 +13,8 @@ log = "0.4.14"
 async-channel = "1.7.1"
 jemallocator = { version = "0.5.0" }
 bmart = "0.2.6"
+once_cell = "1.18.0"
+serde_yaml = "0.9.25"
 
 [features]
 std-alloc = []
