--- a/contrib/bus-to-kafka/svc-tpl-bus-to-kafka.yml
+++ b/contrib/bus-to-kafka/svc-tpl-bus-to-kafka.yml
@@ -3,7 +3,7 @@ bus:
 # service location
 command: venv/bin/python /opt/eva4/contrib/bus-to-kafka/bus-to-kafka.py
 config:
-  # OIDS to subscribe
+  # OIDs to subscribe
   oids:
   - "#"
   kafka:
