--- a/svc/controller-ads/Cargo.toml
+++ b/svc/controller-ads/Cargo.toml
@@ -20,6 +20,7 @@ uuid = { version = "1.1.2", features = ["v4"] }
 itertools = "0.10.3"
 ads = "0.4.1"
 zerocopy = "0.6.1"
+utf16string = "0.2.0"
 
 [features]
 std-alloc = []
