--- a/svc/filemgr/Cargo.toml
+++ b/svc/filemgr/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 eva-common = { version = "0.3.3", features = ["events", "time"] }
-eva-sdk = { version = "0.3.1", features = ["http"] }
+eva-sdk = { version = "0.3.2", features = ["http", "fs"] }
 tokio = { version = "1.20.1", features = ["full"] }
 async-trait = { version = "0.1.51" }
 serde = { version = "1.0.143", features = ["derive", "rc"] }
@@ -20,6 +20,8 @@ jemallocator = { version = "0.5.0" }
 tempfile = "3.3.0"
 bmart = "0.2.4"
 openssl = "0.10.42"
+glob-match = "0.2.1"
+async-recursion = "1.0.5"
 
 [features]
 std-alloc = []
